# Bootcamp_eng_dados

./: .gitignore  README.md  pyproject.toml
.astro/: config.yaml
dags/: Bootcamp_Eng_dados.py  dag_airbyte.py  dag_airbyte_dbt.py  dag_airbyte_gpt.py  dag_airbyte_sucesso.py  dag_airbyte_sync_token.py  dag_airbyte_teste.py  dag_dbt.py  teste.py
dbt_arquivos/: fato_pedidos.sql  sources.yml  tabela_pedidos.sql
modern_data_stackbootcamp_eng_dados/: envs.toml
