[tool.poetry]
name = "bootcamp-eng-dados"
version = "0.1.0"
description = ""
authors = ["Jonfres <jhouers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.5"
apache-airflow = "^2.10.2"
apache-airflow-providers-dbt-cloud = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
